# time-tracker

./: Cargo.toml  README.md  rustfmt.toml
src/: activity.rs  day.rs  main.rs  settings.rs
