[package]
name = "time-tracker"
version = "0.1.0"
authors = ["Aaron Hilbig <darkolan2@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
serde = "1.0.126"
serde_derive = "1.0.126"
serde_json = "1.0.64"
toml = "0.5.8"
colored = "2.0.0"
directories = "3.0.2"